# claude-tg-cli

./: .gitignore  README.md  config.example.toml  pyproject.toml  rules.toml
docs/superpowers/plans/: 2026-07-23-tg-claude.md
docs/superpowers/specs/: 2026-07-23-telegram-claude-agent-design.md
launchd/: com.nvinnikov.tg-claude.plist
tests/: test_approvals.py  test_auth.py  test_config.py  test_render.py  test_rules.py  test_runner.py  test_sessions.py  test_shell.py  test_store.py
tgclaude/: approvals.py  bot.py  config.py  render.py  rules.py  runner.py  sessions.py  shell.py  store.py
